# bots-without-labels

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/skills/bwl-architecture-contract/: SKILL.md
.claude/skills/bwl-build-run-operate/: SKILL.md
.claude/skills/bwl-change-control/: SKILL.md
.claude/skills/bwl-config-and-flags/: SKILL.md
.claude/skills/bwl-debugging-playbook/: SKILL.md
.claude/skills/bwl-detection-theory/: SKILL.md
.claude/skills/bwl-diagnostics-and-tooling/: SKILL.md
.claude/skills/bwl-diagnostics-and-tooling/scripts/: trace_detection.py
.claude/skills/bwl-docs-and-writing/: SKILL.md
.claude/skills/bwl-docs-and-writing/scripts/: check_golden_numbers.py
.claude/skills/bwl-external-positioning/: SKILL.md
.claude/skills/bwl-failure-archaeology/: SKILL.md
.claude/skills/bwl-proof-and-analysis-toolkit/: SKILL.md
.claude/skills/bwl-research-frontier/: SKILL.md
.claude/skills/bwl-research-methodology/: SKILL.md
.claude/skills/bwl-validation-and-qa/: SKILL.md
.claude/skills/bwl-webbot-campaign/: SKILL.md
.claude/skills/netflow-botnet-reference/: SKILL.md
.github/workflows/: ci.yml
bots_without_labels/: __init__.py  __main__.py  anomaly.py  atomic.py  cli.py  data.py  evaluate.py  features.py  heuristics.py  history.py  ingest.py  inject.py  ml.py  pipeline.py  rules.py  synthetic.py  threshold.py  web.py
data/: README.md
development approach/: README.md  agentic_development_architecture.md  community_cheat_sheet.md  shared_agent_principles.md  team_instructions.md
development approach/prompts/: algorithm_coder_prompt.md  algorithm_reviewer_prompt.md  auditor_prompt.md  data_scientist_prompt.md  data_scientist_reviewer_prompt.md  ml_engineer_prompt.md  ml_engineer_reviewer_prompt.md  orchestrator_prompt.md  product_manager_prompt.md  ux_coder_prompt.md  ux_reviewer_prompt.md
docs/: EXEC_MEMO.md  METHODOLOGY.md
evaluation/: BENCHMARKS.md  FINDINGS.md  FOLLOWUP_HI_PHASE1_EVIDENCE.md  actor_residual_probe.py  bournemouth_benchmark.py  cicids_bot_benchmark.py  cicids_family_benchmark.py  ctu13_bot_benchmark.py  harness.py  predictions_digest.py  rule_diagnostic.py  run_benchmarks.py  unsw_benchmark.py
notebooks/: bots_without_labels.ipynb
tests/: conftest.py  test_anomaly.py  test_bournemouth_benchmark.py  test_cicids_family_benchmark.py  test_cli.py  test_ctu13_benchmark.py  test_ctu13_sc3_benchmark.py  test_data.py  test_evaluate.py  test_features.py  test_heuristics.py  test_history.py  test_ingest.py  test_inject.py  test_input_parsing.py  test_pipeline.py  test_real_benchmark.py  test_rules.py  test_run_benchmarks.py  test_schema_overrides.py  test_synthetic.py  test_threshold.py  test_threshold_sensitivity.py  test_web.py
