[project]
name = "bots-without-labels"
version = "0.1.0"
description = "Detect automated traffic in unlabelled logs, with synthetic label injection to measure recall."
requires-python = ">=3.11"
dependencies = [
    "kneed>=0.8.6",
    "matplotlib>=3.10",
    "numpy>=2",
    "pandas>=2",
    "scipy>=1.11",
]

[project.scripts]
bots-without-labels = "bots_without_labels.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pylint>=4.0.5",
    "pytest>=8",
    "jupyterlab>=4",
    "nbconvert>=7",
    "nbformat>=5",
    "ipykernel>=6",
]

[project.optional-dependencies]
eif = ["isotree>=0.6.1"]

[tool.setuptools.packages.find]
include = ["bots_without_labels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
# Test names carry behaviour intent in this project; requiring docstrings on
# every test function creates boilerplate rather than useful documentation.
# The design-metric checks (too-many-*) are disabled as in Google's published
# pylintrc: the pipeline's orchestrator functions are deliberately long and
# comment-heavy rather than fragmented into single-use helpers.
disable = [
    "missing-function-docstring",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
]
